<resources>
    <string name="app_name">EmpressInventory</string>
    <string name="lbl_selling_product">Selling Product</string>
    <string name="lbl_inventory_report">Inventory Report</string>
    <string name="lbl_add_product">Add Product</string>
    <string name="lbl_product_code">Product Code</string>
    <string name="lbl_container_no">Container No</string>
    <string name="lbl_quantity">Quantity</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_export_excel_file">Export Excel File</string>
</resources>